# IBKRTradingBot

./: .env.example  .gitignore  DECISIONS.md  New Trading Strats  ReadMe  STRATEGIES.md  pyproject.toml
config/: baskets.json
data/crypto_cache/: BTC-USD_2014-01-01_2026-06-21.csv  ETH-USD_2014-01-01_2026-06-21.csv  LTC-USD_2014-01-01_2026-06-21.csv
data/fred_cache/: DGS3MO_2000-01-03_2026-04-14.csv  DGS3MO_2000-01-03_2026-04-15.csv  VIXCLS_2000-01-03_2026-04-15.csv  VIXCLS_2018-01-01_2026-04-15.csv
reports/: CONSOLIDATED_2026_05_03.md  RESEARCH_QUEUE.md  SORTINO_ADDENDUM.md
scripts/: build_backadjusted.py  eod_push.ps1  install.ps1  local_norgate_pull.py  preflight.py  pull_commodity_data.py  pull_ibkr_5min.py  run_afternoon.py  run_asymmetric_triggers.py  run_bah_leverage_tax.py  run_bah_on_trend.py  run_bah_on_trend_futures.py  run_bear_recovery_overlay.py  run_bond_test1.py  run_bot.cmd  run_commodity_backtest.py  run_commodity_test1_ls.py  run_commodity_test2_carry.py  run_crypto_characterization.py  run_crypto_test1.py  run_fx_test2.py  run_fx_test2b.py  run_ibs_overlay.py  run_ixic_dotcom_test.py  run_leaps.py  run_long_history.py  run_mes_vs_qqq_index_test.py  run_nq_margin_sensitivity.py  run_nq_vehicle_equivalence.py  run_off_vehicle_compare.py  run_overnight.py  run_parking_vehicles.py  run_phase1.py  run_phase1_5.py  run_realistic_backtest.py  run_regime_filter_test.py  run_tbill_etf_inverse.py  run_tqqq_trend.py  run_trend_filter.py  run_trigger_variants.py  (+6 more)
src/: __init__.py  config.py  logging_setup.py  main.py  wiring.py
tests/: conftest.py  test_backtest.py  test_blackout.py  test_config.py  test_connection.py  test_exits.py  test_fmp.py  test_guardrails.py  test_indicators.py  test_logging_setup.py  test_main.py  test_orders.py  test_position_manager.py  test_runner.py  test_strategies.py  test_v2_foundation.py  test_weekly_budget.py
(+171 files in other folders)
