[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trading-bot"
version = "0.1.0"
description = "Algorithmic options trading bot for Interactive Brokers"
requires-python = ">=3.12"
dependencies = [
    "ib_insync>=0.9.86",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live IBKR paper connection (skipped by default; run with -m integration)",
]
addopts = "-m 'not integration'"
