[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trading-bot"
version = "0.1.0"
description = "Algorithmic options trading bot for Interactive Brokers"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
ibkrbot = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit IBKR paper account (skipped by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py311"
